Correct overflows

--- a/src/Chat/ChatMessageWindow/chat-message-window.scss
+++ b/src/Chat/ChatMessageWindow/chat-message-window.scss
@@ -3,7 +3,7 @@
 :host {
   display: flex;
   flex-grow: 1;
-  overflow-y: scroll;
+  overflow-y: auto;
   background-color: rgb(var(--zn-body));
 
   > div {
