--- a/src/Pane/index.scss
+++ b/src/Pane/index.scss
@@ -27,5 +27,5 @@
   flex-direction: column;
   flex-grow: 1;
   max-height: 100%;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
